MA-3 Fix issue when scrollbar was appearing in IE in addons modal

--- a/src/targets/meandall/styles/views/modals/details.less
+++ b/src/targets/meandall/styles/views/modals/details.less
@@ -34,6 +34,8 @@ dialog.addons {
         }
         .extra {
           margin: 20px 0 20px !important;
+          // Using overflow: auto forces IE to show scrollbar
+          overflow: hidden;
           .add-extra {
             display: none;
           }
